; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msvcrt/extr_string.c_test_strnlen.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msvcrt/extr_string.c_test_strnlen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_strnlen.str = internal constant [7 x i8] c"string\00", align 1
@.str = private unnamed_addr constant [22 x i8] c"Returned length = %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_strnlen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_strnlen() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 @p_strnlen(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @test_strnlen.str, i64 0, i64 0), i32 20)
  store i64 %2, i64* %1, align 8
  %3 = load i64, i64* %1, align 8
  %4 = icmp eq i64 %3, 6
  %5 = zext i1 %4 to i32
  %6 = load i64, i64* %1, align 8
  %7 = trunc i64 %6 to i32
  %8 = call i32 @ok(i32 %5, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %7)
  %9 = call i64 @p_strnlen(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @test_strnlen.str, i64 0, i64 0), i32 3)
  store i64 %9, i64* %1, align 8
  %10 = load i64, i64* %1, align 8
  %11 = icmp eq i64 %10, 3
  %12 = zext i1 %11 to i32
  %13 = load i64, i64* %1, align 8
  %14 = trunc i64 %13 to i32
  %15 = call i32 @ok(i32 %12, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = call i64 @p_strnlen(i8* null, i32 0)
  store i64 %16, i64* %1, align 8
  %17 = load i64, i64* %1, align 8
  %18 = icmp eq i64 %17, 0
  %19 = zext i1 %18 to i32
  %20 = load i64, i64* %1, align 8
  %21 = trunc i64 %20 to i32
  %22 = call i32 @ok(i32 %19, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %21)
  ret void
}

declare dso_local i64 @p_strnlen(i8*, i32) #1

declare dso_local i32 @ok(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
